# pimpl

./: CMakeLists.txt
include/detail/: detail.hpp
